--- a/src/app/components/places/create/create.component.html
+++ b/src/app/components/places/create/create.component.html
@@ -1,1 +1,11 @@
 <p>create works!</p>
+
+<form action="">
+  <input type="text" [formControl]="name" />
+
+  <input type="text" [formControl]="address" />
+
+  <input type="text" [formControl]="lat" />
+
+  <input type="text" [formControl]="lng" />
+</form>
