--- a/src/app/components/places/create/create.component.html
+++ b/src/app/components/places/create/create.component.html
@@ -1,11 +1,49 @@
 <p>create works!</p>
 
-<form action="">
-  <input type="text" [formControl]="name" />
+<form [formGroup]="createForm" (ngSubmit)="onSubmit()">
+  <div class="mb-3">
+    <label for="name" class="form-label">Name</label>
 
-  <input type="text" [formControl]="address" />
+    <input type="text" class="form-control" formControlName="name" />
 
-  <input type="text" [formControl]="lat" />
+    <div>
+      <div *ngIf="f.name.hasError('required')">Name is required.</div>
+      <div *ngIf="f.name.hasError('minlength')">
+        Name must be at least 4 characters long.
+      </div>
+    </div>
+  </div>
 
-  <input type="text" [formControl]="lng" />
+  <div class="mb-3">
+    <label for="address" class="form-label">Address</label>
+
+    <input type="text" class="form-control" formControlName="address" />
+  </div>
+
+  <div class="mb-3">
+    <label for="address" class="form-label">Cords</label>
+    <div class="row">
+      <div class="col-6">
+        <input type="number" class="form-control" formControlName="lat" />
+        <div>
+          <div *ngIf="f.lat.hasError('required')">lat is required.</div>
+          <div *ngIf="f.lat.hasError('max')">Lat max 90</div>
+          <div *ngIf="f.lat.hasError('min')">Lat min -90</div>
+        </div>
+      </div>
+      <div class="col-6">
+        <input type="number" class="form-control" formControlName="lng" />
+        <div>
+          <div *ngIf="f.lng.hasError('required')">lng is required.</div>
+          <div *ngIf="f.lng.hasError('max')">lng max 90</div>
+          <div *ngIf="f.lng.hasError('min')">lng min -90</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <hr />
+  <div class="mb-3">
+    <button type="submit">dikk</button>
+  </div>
 </form>
