--- a/src/app/containers/main/main.component.html
+++ b/src/app/containers/main/main.component.html
@@ -1,13 +1,6 @@
-<main class="main">
-  <div class="content">
-    <div class="left-side">
-      <h1>Hello, {{ title }}</h1>
-      <p>Congratulations! Your app is running. 🎉</p>
-
-      <router-outlet />
-    </div>
-    <div class="divider" role="separator" aria-label="Divider"></div>
-    <div class="right-side">
+<main class="main container-fluid">
+  <div class="row">
+    <div class="col-4">
       <nav>
         <ul>
           <li>
@@ -28,6 +21,12 @@
           </li>
         </ul>
       </nav>
+    </div>
+    <div class="col-8">
+      <h1>Hello, {{ title }}</h1>
+      <p>Congratulations! Your app is running. 🎉</p>
+
+      <router-outlet />
     </div>
   </div>
 </main>
